// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP ukrainian/ukraine_in_russian IDX page A11y I can see the skip to content link 1`] = `"Перейти до змісту"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Україна",
  "url": "/ukrainian",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 2`] = `
{
  "text": "Чому BBC заслуговує на довіру",
  "url": "https://www.bbc.com/ukrainian/institutional-50170368",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 3`] = `
{
  "text": "Правила користування",
  "url": "https://www.bbc.com/ukrainian/institutional-38144387",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 4`] = `
{
  "text": "Особисті дані",
  "url": "https://www.bbc.com/ukrainian/institutional-38144827",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 5`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 6`] = `
{
  "text": "Напишіть на ВВС",
  "url": "https://www.bbc.co.uk/ukrainian/send/u50853885",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Anchors should match text and url 7`] = `
{
  "text": "Ознайомтеся з нашими правилами зовнішніх посилань.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/ukrainian"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Footer I can see the footer copyright and external linking text 1`] = `"© 2023 BBC. BBC не несе відповідальності за контент інших сайтів. Ознайомтеся з нашими правилами зовнішніх посилань."`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Header I can see the branding 1`] = `"BBC News, Україна"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 1`] = `
{
  "text": "Головна",
  "url": "/ukrainian",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 2`] = `
{
  "text": "Війна з Росією",
  "url": "/ukrainian/topics/czp6w66edqpt",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 3`] = `
{
  "text": "Історії",
  "url": "/ukrainian/53725237",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 4`] = `
{
  "text": "Відео",
  "url": "/ukrainian/55425840",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 5`] = `
{
  "text": "Книга року BBC",
  "url": "/ukrainian/features-50320117",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Header Navigation link should match text and url 6`] = `
{
  "text": "Подкасти",
  "url": "/ukrainian/podcasts/p09jsy3h",
}
`;

exports[`AMP ukrainian/ukraine_in_russian IDX page Main heading should match text 1`] = `"Помилка серверу"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Canonical link 1`] = `"http://localhost:7080/ukrainian/ukraine_in_russian"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Heading level 1 1`] = `"Помилка серверу"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Lang attribute 1`] = `"uk"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG description 1`] = `"Новости BBC News Україна на русском"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG image alt 1`] = `"BBC News Україна"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG locale 1`] = `"ru_UA"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG site name 1`] = `"BBC News Україна"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG title 1`] = `"РУС - BBC News Україна"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG type 1`] = `"website"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO OG url 1`] = `"http://localhost:7080/ukrainian/ukraine_in_russian"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Page title 1`] = `"Помилка серверу - BBC News Україна"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Robots meta tag 1`] = `"noindex,nofollow"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Twitter creator 1`] = `"@BBC_ua"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Twitter description 1`] = `"Помилка серверу"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Twitter image alt 1`] = `"BBC News Україна"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/ukrainian.png"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Twitter site 1`] = `"@BBC_ua"`;

exports[`AMP ukrainian/ukraine_in_russian IDX page SEO Twitter title 1`] = `"Помилка серверу - BBC News Україна"`;
